# circustent

./: .gitignore  BUILD_CUDA.sh  CMakeLists.txt  LICENSE  README.md  RUN_CUDA_TEST.sh  cuda_outputs.txt
.tests/: TEST_CUDA_THREADS_1536.sh  TEST_CUDA_THREADS_1536.txt  TEST_CUDA_THREADS_2048.sh  TEST_CUDA_THREADS_2048.txt
cmake/: UseLATEX.cmake
docs/DeveloperGuide/: Makefile  README  circus-tent.tex
docs/DeveloperGuide/figures/: DeveloperGuide.graffle  README
include/: CMakeLists.txt
include/CircusTent/: CMakeLists.txt  CTBaseImpl.h  CTOpts.h  CircusTent.h
scripts/: BUILD.sh  BUILD.sh.bk  CLEAN.sh  TIMING.gnuplot  check_memory.sh  cuda_device_props  cuda_device_props.c  cuda_slurm.sh  format_results_to_csv.sh  job_params.csv  nvidia-smi.sh  omp_test  omp_test_program.c  run_sbatch_from_csv.py
scripts/a100/add_kernels/: add_kernels.sh  add_kernels.sh.bk  rand_add.c  run_add_tests.sh
scripts/a100/add_kernels/outputs/CUDA/: add_kernels_22-06-24_16:57:30.txt  add_kernels_22-06-24_18:04:57.txt  add_kernels_22-06-24_18:39:03.txt  add_kernels_22-06-24_19:13:19.txt  add_kernels_22-06-24_19:50:31.txt  add_kernels_23-06-24_20:13:48.txt  add_kernels_23-06-24_20:13:49.txt
scripts/a100/add_kernels/outputs/OpenMP/: add_kernels_07-07-24_21:02:45.txt
scripts/a100/all_kernels/: all_kernels.sh
scripts/a100/all_kernels/outputs/CUDA/: all_kernels_17-06-24_15:02:54.txt  all_kernels_22-06-24_20:41:58.txt  all_kernels_22-06-24_20:42:30.txt
scripts/a100/parallelism/: parallelism.sh
scripts/a100/problem_size/: problem_size.sh
scripts/archive/: GAMS.gnuplot  runall.sh  test_omp.sh
scripts/archive/omp_test/: test_omp_output.txt  test_omp_output_14-04-23_09:55:15.txt  test_omp_output_14-04-23_10:21:18.txt  test_omp_output_14-04-23_10:29:24.txt  test_omp_output_19-05-23_14:38:47.txt  test_omp_output_19-05-23_14:42:25.txt  test_omp_output_19-05-23_14:44:03.txt  test_omp_output_19-05-23_14:49:23.txt  test_omp_output_19-05-23_14:50:34.txt  test_omp_output_19-05-23_14:55:22.txt  test_omp_output_19-05-23_14:56:06.txt  test_omp_output_19-05-23_14:58:48.txt  test_omp_output_19-05-23_15:01:02.txt
scripts/nocona_scripts/: openmpi-runme.sh  slurm-CENTRAL_ADD.sh  slurm-CENTRAL_ADD_MOD.sh  slurm-CENTRAL_CAS.sh  slurm-GATHER_ADD.sh  slurm-GATHER_CAS.sh  slurm-PTRCHASE_ADD.sh  slurm-PTRCHASE_CAS.sh  slurm-RAND_ADD.sh  slurm-RAND_ADD.sh.bak  slurm-RAND_ADD_DEBUG.sh  slurm-RAND_CAS.sh  slurm-RAND_CAS.sh.bak  slurm-SCATTER_ADD.sh  slurm-SCATTER_CAS.sh  slurm-SG_ADD.sh  slurm-SG_CAS.sh  slurm-STRIDE1_ADD.sh  slurm-STRIDE1_CAS.sh  slurm-STRIDEN_ADD.sh  slurm-STRIDEN_CAS.sh  slurm.sh
scripts/nv_v100/add_kernels/: add_kernels.sh  run_add_kernels.sh
scripts/nv_v100/add_kernels/outputs/: add_kernels_31-01-23_18:39:12.txt
scripts/nv_v100/add_kernels/outputs/OpenACC/: add_kernels_05-03-23_20:30:14.txt  add_kernels_05-03-23_20:43:02.txt  add_kernels_05-03-23_20:54:15.txt  add_kernels_05-03-23_21:09:28.txt  add_kernels_05-03-23_22:29:06.txt  add_kernels_14-02-23_17:07:03.txt  add_kernels_16-02-23_10:11:55.txt  add_kernels_16-02-23_10:13:34.txt  add_kernels_16-02-23_12:08:52.txt  add_kernels_16-02-23_12:09:39.txt  add_kernels_16-02-23_13:14:09.txt  add_kernels_16-02-23_13:15:42.txt  add_kernels_16-02-23_13:19:02.txt  add_kernels_16-02-23_13:28:22.txt  add_kernels_17-02-23_09:18:06.txt  add_kernels_17-02-23_09:20:07.txt  add_kernels_17-02-23_09:21:18.txt  add_kernels_17-02-23_09:33:51.txt  add_kernels_17-02-23_09:41:50.txt  add_kernels_25-01-23_22:59:41.txt  add_kernels_25-01-23_23:06:58.txt  add_kernels_25-01-23_23:25:13.txt  add_kernels_25-01-23_23:42:02.txt  add_kernels_31-01-23_17:53:56.txt  add_kernels_31-01-23_17:54:33.txt  add_kernels_31-01-23_17:55:04.txt  add_kernels_31-01-23_18:03:08.txt  add_kernels_31-01-23_18:06:23.txt  add_kernels_31-01-23_18:06:42.txt  add_kernels_31-01-23_18:06:57.txt  add_kernels_31-01-23_18:08:27.txt  add_kernels_31-01-23_18:08:52.txt  add_kernels_31-01-23_18:11:24.txt  add_kernels_31-01-23_18:18:55.txt  add_kernels_31-01-23_18:41:23.txt  add_kernels_31-01-23_18:42:15.txt  add_kernels_31-01-23_18:46:02.txt  (+3 more)
scripts/nv_v100/cuda_all/: cuda_all.sh
scripts/quanah_scripts/: openmpi-runme.sh  quanah_rerun.sh  slurm-CENTRAL_ADD.sh  slurm-CENTRAL_CAS.sh  slurm-GATHER_ADD.sh  slurm-GATHER_CAS.sh  slurm-PTRCHASE_ADD.sh  slurm-PTRCHASE_CAS.sh  slurm-RAND_ADD.sh  slurm-RAND_CAS.sh  slurm-SCATTER_ADD.sh  slurm-SCATTER_CAS.sh  slurm-SG_ADD.sh  slurm-SG_CAS.sh  slurm-STRIDE1_ADD.sh  slurm-STRIDE1_CAS.sh  slurm-STRIDEN_ADD.sh  slurm-STRIDEN_CAS.sh  slurm.sh
scripts/v100/add_kernels/: add_kernels.sh
scripts/v100/all_kernels/: all_kernels.sh
scripts/v100/parallelism/: parallelism.sh  striden.sh
scripts/v100/problem_size/: problem_size.sh
src/: CMakeLists.txt
src/CircusTent/: CMakeLists.txt  CTOpts.cpp  CT_Main-Windows-Desktop.cpp  CT_Main.cpp
src/CircusTent/Impl/: CMakeLists.txt
src/CircusTent/Impl/CT_CPP_STD/: CMakeLists.txt  CT_CPP_STD.cpp  CT_CPP_STD.h  CT_CPP_STD_IMPL.cpp
src/CircusTent/Impl/CT_CUDA/: CMakeLists.txt  CT_CUDA.cu  CT_CUDA.cuh  CT_CUDA_IMPL.cu
src/CircusTent/Impl/CT_MPI/: CMakeLists.txt  CT_MPI.cpp  CT_MPI.h  CT_MPI_IMPL.c
src/CircusTent/Impl/CT_OMP/: CMakeLists.txt  CT_IMPL.c  CT_OMP.cpp  CT_OMP.h  CT_OMP_IMPL.c
src/CircusTent/Impl/CT_OMP_TARGET/: CMakeLists.txt  CT_OMP_TARGET.cpp  CT_OMP_TARGET.h  CT_OMP_TARGET_IMPL.c
src/CircusTent/Impl/CT_OPENACC/: CMakeLists.txt  CT_OPENACC.cpp  CT_OPENACC.h  CT_OPENACC_IMPL.c
src/CircusTent/Impl/CT_OPENCL/: CMakeLists.txt  CT_OPENCL-Windows-Desktop.h  CT_OPENCL.cpp  CT_OPENCL.h  CT_OPENCL_IMPL-Windows-Desktop.c  CT_OPENCL_IMPL.c  CT_OPENCL_KERNELS.cl
src/CircusTent/Impl/CT_OPENSHMEM/: CMakeLists.txt  CT_SHMEM.cpp  CT_SHMEM.h  CT_SHMEM_IMPL.c
src/CircusTent/Impl/CT_PTHREADS/: CMakeLists.txt  CT_PTHREADS.cpp  CT_PTHREADS.h  CT_PTHREADS_IMPL.c
src/CircusTent/Impl/CT_XBGAS/: CMakeLists.txt  CT_XBGAS.cpp  CT_XBGAS.h  CT_XBGAS_IMPL.c
src/CircusTent/Impl/CT_YGM/: CMakeLists.txt  CT_YGM.cpp  CT_YGM.h  CT_YGM_IMPL.cpp  CT_YGM_INSTALL_GUIDE.md  CT_YGM_USAGE_GUIDE.md
test/: CMakeLists.txt
(+88 files in other folders)
